# s2-workload

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  index.yaml  justfile  release-plz.toml
.github/workflows/: build-s2-lite.yml  ci.yml  release-cli.yml
.workers/: backlog.md  build.sh  loop-state.md  map.md  publish.py
.workers/areas/: appends.md  control-plane.md  durability.md  lifecycle.md  reads.md  retention.md
.workers/issues/: control-plane-delete-straddle-ensure-erased.md  doe-stale-deadline-across-recreate.md  repro_delete_straddle.sh  repro_doe_stale_deadline.sh
.workers/preflight/: preflight-2026-07-08.md
.workers/promises/: acked-appends-survive-restart.md  cas-appends-exactly-once.md  control-plane-acked-ops-durable.md  fencing-excludes-stale-writers.md  reads-honor-request-windows.md  reads-never-lose-observed-records.md  stream-delete-recreate-resurrection.md  tail-is-gapless-and-monotonic.md  timestamps-never-regress.md  trim-is-final.md  zombie-writer-cannot-corrupt.md
.workers/runs/: acked-appends-baseline.md  acked-appends-kill-during-recovery.md  acked-appends-pipelined-kill.md  cas-storm-across-kill-green.md  control-plane-delete-straddle-ensure-erased.md  delete-recreate-resurrection-green-rungs.md  doe-stale-deadline-across-recreate.md  executor-notes.md  fencing-baseline.md  fencing-fence-ack-straddles-kill.md  fencing.md  reads-tail-across-restart.md  reads-tail-baseline.md  reads-tail-last-event-id-resume.md  reads-tail-slow-follower-lagged.md  tail-gapless-straddle-at-kill.md  tail-gapless.md  trim-straddles-kill-green.md  zombie-double-kill-mid-recovery.md  zombie-live-overlap-double-start.md  zombie-writer.md
.workers/workloads/: acked_appends.py  cas_appends.py  control_plane.sh  fencing.sh  lifecycle.sh  reads_tail.py  tail_gapless.sh  trim.py  zombie_writer.sh
api/: CHANGELOG.md  Cargo.toml
api/src/v1/: basin.rs  metrics.rs  mod.rs  scope.rs
api/src/v1/stream/: extract.rs  mod.rs  s2s.rs  sse.rs
charts/s2-lite-helm/: Chart.yaml
cli/: CHANGELOG.md  Cargo.toml  schema.json
cli/src/: cli.rs  config.rs  error.rs  main.rs  ops.rs  types.rs
cli/src/tui/: app.rs  event.rs  ui.rs
common/: CHANGELOG.md  Cargo.toml
common/src/: access.rs  caps.rs  metrics.rs  read_extent.rs  resources.rs
common/src/record/: fencing.rs
common/src/types/: basin.rs  mod.rs  resources.rs  scope.rs
lite/: CHANGELOG.md  Cargo.toml
lite/src/: metrics.rs  server.rs  stream_id.rs
lite/src/backend/: basins.rs  core.rs  streamer.rs  streams.rs
lite/src/backend/bgtasks/: basin_deletion.rs  mod.rs
lite/src/backend/kv/: basin_deletion_pending.rs  basin_meta.rs  mod.rs  stream_fencing_token.rs  stream_id_mapping.rs  stream_record_data.rs  stream_tail_position.rs  stream_trim_point.rs
lite/src/handlers/: mod.rs
lite/src/handlers/v1/: error.rs  records.rs
lite/tests/backend/control_plane/: basin.rs  stream.rs
resource-spec/: CHANGELOG.md  Cargo.toml
sdk/: CHANGELOG.md  Cargo.toml
sdk/examples/: docs_encryption.rs
sdk/src/: api.rs  client.rs  lib.rs  ops.rs  types.rs
sdk/tests/: account_ops.rs  basin_ops.rs  stream_ops.rs
sim/: Cargo.toml  README.md
sim/src/: history.rs  lite_host.rs  main.rs  meta.rs  net.rs  object_store_http.rs  s3.rs
sim/src/scenarios/: linearizable.rs  mod.rs  smoke.rs
storage/: CHANGELOG.md  Cargo.toml
storage/src/: bash.rs
storage/src/record/: encryption.rs  framing.rs  mod.rs
testcontainers/: CHANGELOG.md  Cargo.toml  README.md
testcontainers/examples/: s2_lite.rs
testcontainers/src/: lib.rs
