[package]
name = "s2-storage"
version = "0.1.2"
description = "Storage-layer internals shared by S2 server implementations"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["s2", "durable", "streams", "storage"]

[features]
test-util = []

[dependencies]
aegis = { workspace = true }
aes-gcm = { workspace = true, features = ["zeroize"] }
blake3 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
s2-common = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
